--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <body>
 	<h1>Greetings from Eggboiled!</h1>
 	<h2>Make Good Art. Are you Ready?</h2>
+	<h3>Open the Console Log to see your changes.</h3>
 	<div id="root"></div>
 <script src="bundle.js"></script>
 </body>
