--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Eggboiled Project</title>
+	<title>React Project</title>
 </head>
 <body>
-	<h1>Greetings from Eggboiled!</h1>
-	<h2>Make Good Art. Are you Ready?</h2>
-	<h3>Open the Console Log to see your changes.</h3>
+	<h1>Hello Worthlss!</h1>
 	<div id="root"></div>
 <script src="bundle.js"></script>
 </body>
