--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>React Project</title>
+	<title>React Boilerplate Project</title>
 </head>
 <body>
 	<h1>Hello Worthlss!</h1>
